--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,17 @@
-.DS_Store
-node_modules
-/dist
+/*
 
+!/.firebase
+!/.github
+!/public
+!/src
+!/.firebaserc
+!/.gitignore
+!/babel.config.js
+!/firebase.json
+!/firestore.indexes.json
+!/firestore.rules
+!/package.json
+!/README.md
+!/yarn.lock
 
-# local env files
-.env.local
-.env.*.local
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+/src/firebase.js
